--- a/app/index.html
+++ b/app/index.html
@@ -68,7 +68,12 @@ Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
   <!-- endbuild -->
 
   <template is="dom-bind" id="app">
-    <h1>oVPN Server Stats</h1>
+    <paper-toolbar>
+        <div class="title">oVPN.to Server Stats</div>
+        <div>Graphs: </div>
+        <paper-checkbox checked id="network">Network load (Mbit/s)</paper-checkbox>
+        <paper-checkbox id="cpu">CPU load</paper-checkbox>
+    </paper-toolbar>
     <div class="horizontal" id="main">
     </div>
   </template>
