Display date in tooltip instead of timestamp

--- a/app/elements/chart-card/chart-card.html
+++ b/app/elements/chart-card/chart-card.html
@@ -95,7 +95,8 @@
                             id: "l"
                         }],
                         xAxes: [{
-                          type: "time"
+                          type: "time",
+                          time: {tooltipFormat: "MMMM Do YYYY, hh:mm:ss"}
                         }]
                     },
                     responsive: false,
