--- a/app/styles/shared-styles.html
+++ b/app/styles/shared-styles.html
@@ -26,6 +26,10 @@
         }
       }
 
+      paper-toolbar {
+        background: var(--paper-blue-700);
+      }
+
       paper-toolbar paper-checkbox {
         padding-left: 25px;
         --paper-checkbox-checked-color: var(--paper-blue-100);
@@ -45,6 +49,20 @@
         --paper-checkbox-unchecked-color: #CDDC39;
         --paper-checkbox-checked-color: #CDDC39;
         --paper-checkbox-label-color: var(--paper-yellow-100);
+      }
+
+      #copyright {
+        background: url(../images/section-gradient-light.png);
+        background-position: 0 -30px;
+        background-color: var(--paper-blue-800);
+        height: 75px;
+
+      }
+
+      #copyright p {
+        color: white;
+        padding-left: 20px;
+        text-align: center;
       }
     </style>
   </template>
