--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -26,6 +26,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
 <link rel="import" href="../bower_components/paper-card/paper-card.html">
 <link rel="import" href="../bower_components/paper-checkbox/paper-checkbox.html">
+<link rel="import" href="../bower_components/paper-header-panel/paper-header-panel.html">
 
 <!-- Uncomment next block to enable Service Worker Support (2/2) -->
 <!--
