--- a/app/index.html
+++ b/app/index.html
@@ -75,10 +75,11 @@ Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
           <paper-checkbox checked id="network">Network load (Mbit/s)</paper-checkbox>
           <paper-checkbox id="cpu">CPU load</paper-checkbox>
       </paper-toolbar>
-
+    <chart-card id="big-card" big autoload="false">
+    </chart-card>
     <div class="horizontal" id="main">
     </div>
-    <div class="layout horizontal" id="copyright"><p>&copy; bauerj 2016<br>Licensed under the Apache License, Version 2.0<br><a href="">Edit on Github</a></p></div>
+    <div class="layout horizontal" id="copyright"><p>&copy; bauerj 2016<br>Licensed under the Apache License, Version 2.0<br><a href="https://github.com/bauerj/ovpn-stats">Edit on Github</a></p></div>
     </paper-header-panel>
 
   </template>
