--- a/app/styles/shared-styles.html
+++ b/app/styles/shared-styles.html
@@ -64,6 +64,10 @@
         padding-left: 20px;
         text-align: center;
       }
+
+      #big-card {
+        display:none;
+      }
     </style>
   </template>
 </dom-module>
